--- a/templates/ttedb/home.html
+++ b/templates/ttedb/home.html
@@ -29,6 +29,11 @@
                             <i class="fas fa-search"></i> Search
                         </button>
                     </div>
+                    <div class="text-center mt-2">
+                        <a href="{% url 'ttedb:search' %}" class="text-white text-decoration-none">
+                            <small><i class="fas fa-search-plus me-1"></i>Advanced PICO Search</small>
+                        </a>
+                    </div>
                 </div>
             </form>
             
