--- a/shared_theme/templates/xera_base.html
+++ b/shared_theme/templates/xera_base.html
@@ -260,5 +260,10 @@
             });
         }
     </script>
+    
+    <!-- Floating Dark Theme Toggle -->
+    <button id="theme-toggle" class="theme-toggle-floating" aria-label="Toggle dark mode" title="Toggle dark mode">
+        <i class="fas fa-moon" id="theme-icon"></i>
+    </button>
 </body>
 </html> 
