--- a/templates/ttedb/home.html
+++ b/templates/ttedb/home.html
@@ -148,8 +148,8 @@
                     <a href="{% url 'ttedb:learning_hub' %}" class="btn btn-outline-primary">
                         <i class="fas fa-graduation-cap me-2"></i>Learning Hub
                     </a>
-                    <a href="{% url 'ttedb:statistics' %}" class="btn btn-outline-primary">
-                        <i class="fas fa-chart-bar me-2"></i>Database Statistics
+                                                <a href="{% url 'ttedb:analysis' %}" class="btn btn-outline-primary">
+                                <i class="fas fa-microscope me-2"></i>Comprehensive Analysis
                     </a>
                     <a href="/api/" class="btn btn-outline-primary" target="_blank">
                         <i class="fas fa-code me-2"></i>API Documentation
