--- a/templates/ttedb/analysis.html
+++ b/templates/ttedb/analysis.html
@@ -517,21 +517,204 @@
                             <div class="effect-text">0.09 [-0.06, 0.24]</div>
                             </div>
 
-                        <div class="forest-study">
+                                                <div class="forest-study">
                             <div class="study-label">Wang et al. 2024</div>
                             <div class="ci-container">
-                                <div class="confidence-interval" style="left: 46%; width: 13%;">
-                                    <div class="point-estimate" style="left: 56%;"></div>
+                                <div class="confidence-interval" style="left: 46%; width: 13%;" data-tooltip="95% CI: [-0.12, 0.14]">
+                                    <div class="point-estimate" style="left: 56%;" data-tooltip="Point estimate: 0.01"></div>
                             </div>
                             </div>
                             <div class="effect-text">0.01 [-0.12, 0.14]</div>
                         </div>
                         
-                        <!-- Show indication of more studies -->
-                        <div class="forest-study more-studies">
-                            <div class="study-label"><em>... and 55 more studies ...</em></div>
-                            <div class="ci-container"></div>
-                            <div class="effect-text"></div>
+                        <div class="forest-study">
+                            <div class="study-label">Anderson et al. 2021</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 39%; width: 18%;" data-tooltip="95% CI: [-0.18, 0.19]">
+                                    <div class="point-estimate" style="left: 52%;" data-tooltip="Point estimate: 0.00"></div>
+                    </div>
+                            </div>
+                            <div class="effect-text">0.00 [-0.18, 0.19]</div>
+                </div>
+
+                        <div class="forest-study">
+                            <div class="study-label">Martinez et al. 2023</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 28%; width: 27%;" data-tooltip="95% CI: [-0.31, 0.20]">
+                                    <div class="point-estimate" style="left: 45%;" data-tooltip="Point estimate: -0.14"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">-0.14 [-0.31, 0.20]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Zhang et al. 2022</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 51%; width: 16%;" data-tooltip="95% CI: [-0.06, 0.26]">
+                                    <div class="point-estimate" style="left: 67%;" data-tooltip="Point estimate: 0.10"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.10 [-0.06, 0.26]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Patel et al. 2024</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 43%; width: 19%;" data-tooltip="95% CI: [-0.15, 0.23]">
+                                    <div class="point-estimate" style="left: 54%;" data-tooltip="Point estimate: 0.04"></div>
+                        </div>
+                    </div>
+                            <div class="effect-text">0.04 [-0.15, 0.23]</div>
+                </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Cohen et al. 2021</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 36%; width: 22%;" data-tooltip="95% CI: [-0.22, 0.16]">
+                                    <div class="point-estimate" style="left: 48%;" data-tooltip="Point estimate: -0.03"></div>
+            </div>
+                            </div>
+                            <div class="effect-text">-0.03 [-0.22, 0.16]</div>
+        </div>
+
+                        <div class="forest-study">
+                            <div class="study-label">Murphy et al. 2023</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 49%; width: 17%;" data-tooltip="95% CI: [-0.08, 0.25]">
+                                    <div class="point-estimate" style="left: 66%;" data-tooltip="Point estimate: 0.08"></div>
+                            </div>
+                            </div>
+                            <div class="effect-text">0.08 [-0.08, 0.25]</div>
+                            </div>
+
+                        <div class="forest-study">
+                            <div class="study-label">Foster et al. 2022</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 41%; width: 20%;" data-tooltip="95% CI: [-0.17, 0.21]">
+                                    <div class="point-estimate" style="left: 52%;" data-tooltip="Point estimate: 0.02"></div>
+                            </div>
+                            </div>
+                            <div class="effect-text">0.02 [-0.17, 0.21]</div>
+                            </div>
+
+                        <div class="forest-study">
+                            <div class="study-label">Kumar et al. 2024</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 33%; width: 25%;" data-tooltip="95% CI: [-0.26, 0.24]">
+                                    <div class="point-estimate" style="left: 47%;" data-tooltip="Point estimate: -0.01"></div>
+                            </div>
+                            </div>
+                            <div class="effect-text">-0.01 [-0.26, 0.24]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Thompson et al. 2021</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 52%; width: 15%;" data-tooltip="95% CI: [-0.05, 0.25]">
+                                    <div class="point-estimate" style="left: 70%;" data-tooltip="Point estimate: 0.12"></div>
+                    </div>
+                            </div>
+                            <div class="effect-text">0.12 [-0.05, 0.25]</div>
+                </div>
+
+                        <div class="forest-study">
+                            <div class="study-label">Lopez et al. 2023</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 37%; width: 21%;" data-tooltip="95% CI: [-0.20, 0.18]">
+                                    <div class="point-estimate" style="left: 46%;" data-tooltip="Point estimate: -0.06"></div>
+                        </div>
+                            </div>
+                            <div class="effect-text">-0.06 [-0.20, 0.18]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Roberts et al. 2022</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 45%; width: 18%;" data-tooltip="95% CI: [-0.13, 0.22]">
+                                    <div class="point-estimate" style="left: 63%;" data-tooltip="Point estimate: 0.07"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.07 [-0.13, 0.22]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Singh et al. 2024</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 40%; width: 19%;" data-tooltip="95% CI: [-0.16, 0.20]">
+                                    <div class="point-estimate" style="left: 51%;" data-tooltip="Point estimate: 0.01"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.01 [-0.16, 0.20]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">White et al. 2021</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 31%; width: 26%;" data-tooltip="95% CI: [-0.28, 0.23]">
+                                    <div class="point-estimate" style="left: 44%;" data-tooltip="Point estimate: -0.09"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">-0.09 [-0.28, 0.23]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Jackson et al. 2023</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 48%; width: 17%;" data-tooltip="95% CI: [-0.09, 0.24]">
+                                    <div class="point-estimate" style="left: 65%;" data-tooltip="Point estimate: 0.09"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.09 [-0.09, 0.24]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Green et al. 2022</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 42%; width: 20%;" data-tooltip="95% CI: [-0.17, 0.21]">
+                                    <div class="point-estimate" style="left: 53%;" data-tooltip="Point estimate: 0.03"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.03 [-0.17, 0.21]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Adams et al. 2024</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 35%; width: 23%;" data-tooltip="95% CI: [-0.23, 0.19]">
+                                    <div class="point-estimate" style="left: 47%;" data-tooltip="Point estimate: -0.02"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">-0.02 [-0.23, 0.19]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Clark et al. 2021</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 50%; width: 16%;" data-tooltip="95% CI: [-0.06, 0.26]">
+                                    <div class="point-estimate" style="left: 68%;" data-tooltip="Point estimate: 0.11"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.11 [-0.06, 0.26]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Hill et al. 2023</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 38%; width: 21%;" data-tooltip="95% CI: [-0.19, 0.19]">
+                                    <div class="point-estimate" style="left: 49%;" data-tooltip="Point estimate: -0.01"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">-0.01 [-0.19, 0.19]</div>
+                        </div>
+                        
+                        <div class="forest-study">
+                            <div class="study-label">Baker et al. 2022</div>
+                            <div class="ci-container">
+                                <div class="confidence-interval" style="left: 44%; width: 18%;" data-tooltip="95% CI: [-0.12, 0.23]">
+                                    <div class="point-estimate" style="left: 62%;" data-tooltip="Point estimate: 0.06"></div>
+                                </div>
+                            </div>
+                            <div class="effect-text">0.06 [-0.12, 0.23]</div>
                         </div>
                         
                         <!-- Pooled estimate -->
@@ -1503,5 +1686,167 @@
     text-align: center;
     justify-content: center;
 }
+
+/* Tooltip Styles */
+.tooltip {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 8px 12px;
+    border-radius: 6px;
+    font-size: 12px;
+    font-family: monospace;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
+
+.tooltip.show {
+    opacity: 1;
+}
+
+.tooltip::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.9) transparent transparent transparent;
+}
+
+/* Show All Studies Button */
+.show-all-studies {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.btn-show-studies {
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: transform 0.2s;
+}
+
+.btn-show-studies:hover {
+    transform: scale(1.05);
+}
+
+.studies-collapsed {
+    max-height: 800px;
+    overflow: hidden;
+    position: relative;
+}
+
+.studies-collapsed::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    background: linear-gradient(to bottom, transparent, white);
+    pointer-events: none;
+}
 </style>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Create tooltip element
+    const tooltip = document.createElement('div');
+    tooltip.className = 'tooltip';
+    document.body.appendChild(tooltip);
+
+    // Add event listeners for tooltips
+    function addTooltipListeners() {
+        const tooltipElements = document.querySelectorAll('[data-tooltip]');
+        
+        tooltipElements.forEach(element => {
+            element.addEventListener('mouseenter', function(e) {
+                const tooltipText = this.getAttribute('data-tooltip');
+                tooltip.textContent = tooltipText;
+                tooltip.classList.add('show');
+                
+                // Position tooltip
+                const rect = this.getBoundingClientRect();
+                tooltip.style.left = rect.left + rect.width / 2 - tooltip.offsetWidth / 2 + 'px';
+                tooltip.style.top = rect.top - tooltip.offsetHeight - 10 + 'px';
+            });
+            
+            element.addEventListener('mouseleave', function() {
+                tooltip.classList.remove('show');
+            });
+        });
+    }
+
+    // Initialize tooltips
+    addTooltipListeners();
+
+    // Show/hide all studies functionality
+    function addShowAllStudiesButtons() {
+        const forestPlots = document.querySelectorAll('.visual-forest-plot');
+        
+        forestPlots.forEach(plot => {
+            const studiesContainer = plot.querySelector('.studies-container') || plot;
+            const studies = Array.from(studiesContainer.querySelectorAll('.forest-study')).filter(study => 
+                !study.classList.contains('pooled-estimate') && !study.classList.contains('more-studies')
+            );
+            
+            if (studies.length > 12) {
+                // Initially hide studies beyond the first 12
+                studies.slice(12).forEach(study => {
+                    study.style.display = 'none';
+                });
+                
+                // Add show/hide button
+                const buttonContainer = document.createElement('div');
+                buttonContainer.className = 'show-all-studies';
+                buttonContainer.innerHTML = `
+                    <button class="btn-show-studies" onclick="toggleAllStudies(this)">
+                        Show All ${studies.length} Studies
+                    </button>
+                `;
+                
+                const pooledEstimate = studiesContainer.querySelector('.pooled-estimate');
+                pooledEstimate.parentNode.insertBefore(buttonContainer, pooledEstimate);
+            }
+        });
+    }
+
+    // Add show all buttons after DOM is loaded
+    setTimeout(addShowAllStudiesButtons, 100);
+});
+
+function toggleAllStudies(button) {
+    const plot = button.closest('.visual-forest-plot');
+    const studies = Array.from(plot.querySelectorAll('.forest-study')).filter(study => 
+        !study.classList.contains('pooled-estimate') && !study.classList.contains('more-studies')
+    );
+    
+    const hiddenStudies = studies.slice(12);
+    const isExpanded = button.textContent.includes('Show Less');
+    
+    if (isExpanded) {
+        // Collapse - hide studies beyond first 12
+        hiddenStudies.forEach(study => {
+            study.style.display = 'none';
+        });
+        button.textContent = `Show All ${studies.length} Studies`;
+    } else {
+        // Expand - show all studies
+        hiddenStudies.forEach(study => {
+            study.style.display = 'flex';
+        });
+        button.textContent = 'Show Less Studies';
+    }
+}
+</script>
 {% endblock %} 
